Fix 236 - Image aligns to right when inheriting CSS text-align property

--- a/src/css/lightgallery.css
+++ b/src/css/lightgallery.css
@@ -763,6 +763,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   top: 0;
   left: 0;
   z-index: 1050;
+  text-align: left;
   opacity: 0;
   -webkit-transition: opacity 0.15s ease 0s;
   -o-transition: opacity 0.15s ease 0s;
